website/websites/u64q/code/revcomp.3.pypy.log

Wed, 03 Jun 2015 13:33:10 GMT

COMMAND LINE:
/usr/bin/pypy revcomp.pypy-3.pypy 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Traceback (most recent call last):
  File "<builtin>/app_main.py", line 75, in run_toplevel
  File "revcomp.pypy-3.pypy", line 25
    print(line, end='')
                  ^
SyntaxError: invalid syntax
